--- a/index.html
+++ b/index.html
@@ -13,7 +13,68 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    
+    <div class="container">
+      <div class="container__singup">
+        <div class="welcome">
+          <h1 class="welcome__title">Learn to code by watching others</h1>
+          <p class="welcome__pararagraph">
+            See how experience developers solve problems in real-time. Watching
+            scripted tutorials is great, but understading how developers think
+            is invaluable.
+          </p>
+        </div>
+        <div class="information">
+          <div class="information__announcer">
+            <div class="information__texts-announcer">
+              <a href="#" class="information__link">Try it free 7 days</a>
+              <p class="information__text">
+                then $20/mo . thereafter
+              </p>
+            </div>
+          </div>
+          <form action="#" class="form">
+            <!-- First Name -->
+            <div class="form__field-content">
+              <div class="form__field">
+                <input type="text" class="form__text-field" placeholder="First Name">
+                <i class="form__icon-field fas fa-exclamation-circle"></i>
+              </div>
+              <span class="form__error-messages">First Name cannot be empty</span>
+            </div>
+            <!-- Last Name -->
+            <div class="form__field-content">
+              <div class="form__field">
+                <input type="text" class="form__text-field" placeholder="Last Name">
+                <i class="form__icon-field fas fa-exclamation-circle"></i>
+              </div>
+              <span class="form__error-messages">First Name cannot be empty</span>
+            </div>
+            <!-- Email -->
+            <div class="form__field-content">
+              <div class="form__field">
+                <input type="email" class="form__text-field" placeholder="Email Address">
+                <i class="form__icon-field fas fa-exclamation-circle"></i>
+              </div>
+              <span class="form__error-messages">First Name cannot be empty</span>
+            </div>
+            <!-- Password -->
+            <div class="form__field-content">
+              <div class="form__field">
+                <input type="password" class="form__text-field" placeholder="Password">
+                <i class="form__icon-field fas fa-exclamation-circle"></i>
+              </div>
+              <span class="form__error-messages">First Name cannot be empty</span>
+            </div>
+            <!-- Button -->
+            <input type="button" value="Clain your free trial" class="form__button">
+            <small class="form__terms-and-services">
+              <span class="form__arguments">By clicking the button, you are agreeing to our</span>
+              <a href="#" class="form__link">Terms and Services</a>
+            </small>
+          </form>
+        </div>
+      </div>
+    </div>
+    <script src="https://kit.fontawesome.com/eae3c428ec.js" crossorigin="anonymous"></script>
   </body>
 </html>
